--- a/Solvers/Solvers based on graph theory and greedy algorithm/普通模式-图论+贪婪算法（单步）.ipynb
+++ b/Solvers/Solvers based on graph theory and greedy algorithm/普通模式-图论+贪婪算法（单步）.ipynb
@@ -252,7 +252,7 @@
    "source": [
     "fp=(eval(input('请输入旗点纵坐标（从0开始）：')), eval(input('请输入旗点横坐标（从0开始）：')))\n",
     "\n",
-    "mat=pd.read_excel(r'C:/Anaconda/JupyterCode/色彩翻翻求解器/3-7 (3,2).xlsx', header=None)\n",
+    "mat=pd.read_excel(r'目录/地图.xlsx', header=None)\n",
     "sl=np.shape(mat)[0]\n",
     "\n",
     "mat"
@@ -349,6 +349,7 @@
    },
    "outputs": [],
    "source": [
+    "# 总加权深度计算函数（关卡图，旗点坐标，深权系数）\n",
     "def calc_TWD(G, fp, dwc=1):\n",
     "    TWD=0\n",
     "    for node in G._node:\n",
@@ -372,25 +373,34 @@
    "source": [
     "def greedy_algorithm(G, fp, dwc=1):\n",
     "    G1=G.copy()\n",
+    "    # 计算原始关卡图的总加权深度\n",
     "    pre_TWD=calc_TWD(G1, fp, dwc)\n",
+    "    # 初始化操作序列\n",
     "    seq_opt=[]\n",
     "    \n",
+    "    # 当总加权深度大于0时，进行循环\n",
     "    while pre_TWD>0:\n",
     "        o_T_df=pd.DataFrame([list({'r','o','y','g','b','p'}-{(G1._node[fp])['color']}), np.empty(5, dtype=int)], \\\n",
     "                            index=['operation', 'TWD']).T\n",
+    "        # 计算各变色操作后的总加权深度\n",
     "        for i in range(5):\n",
     "            G2=G1.copy()\n",
     "            operation=o_T_df.iloc[i, 0]\n",
     "            (G2._node[fp])['color']=operation\n",
     "            o_T_df.iloc[i, 1]=calc_TWD(merge(G2, fp), fp, dwc)\n",
-    "            \n",
+    "        \n",
+    "        # 选出能最大减小总加权深度的变色操作\n",
     "        operation_opt=o_T_df.sort_values(by='TWD').iloc[0, 0]\n",
+    "        # 更新操作序列\n",
     "        seq_opt.append(operation_opt)\n",
     "        \n",
+    "        # 更新关卡图\n",
     "        (G1._node[fp])['color']=operation_opt\n",
     "        G1=merge(G1, fp)\n",
+    "        # 更新关卡图的总加权深度\n",
     "        pre_TWD=calc_TWD(G1, fp, dwc)\n",
-    "        \n",
+    "    \n",
+    "    # 返回通关所需步数和操作序列\n",
     "    return len(seq_opt), seq_opt"
    ]
   },
