--- a/Solvers/Solvers based on graph theory and greedy algorithm/普通模式-图论+贪婪算法（多步）.ipynb
+++ b/Solvers/Solvers based on graph theory and greedy algorithm/普通模式-图论+贪婪算法（多步）.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 7,
    "id": "95d6cb55",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-08T14:43:03.256497Z",
-     "start_time": "2023-11-08T14:43:03.249497Z"
+     "end_time": "2024-01-28T12:50:32.888125Z",
+     "start_time": "2024-01-28T12:50:32.871121Z"
     }
    },
    "outputs": [],
@@ -19,12 +19,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 8,
    "id": "92dfb187",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-08T14:43:06.385128Z",
-     "start_time": "2023-11-08T14:43:03.258498Z"
+     "end_time": "2024-01-28T12:50:36.634969Z",
+     "start_time": "2024-01-28T12:50:32.890125Z"
     }
    },
    "outputs": [
@@ -244,7 +244,7 @@
        "10  g  b  b  y  y  y  p  p  r  p  b"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,7 +252,7 @@
    "source": [
     "fp=(eval(input('请输入旗点纵坐标（从0开始）：')), eval(input('请输入旗点横坐标（从0开始）：')))\n",
     "\n",
-    "mat=pd.read_excel(r'C:/Anaconda/JupyterCode/色彩翻翻求解器/3-6 (2,1).xlsx', header=None)\n",
+    "mat=pd.read_excel(r'目录/地图.xlsx', header=None)\n",
     "sl=np.shape(mat)[0]\n",
     "\n",
     "mat"
@@ -260,12 +260,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 9,
    "id": "34624714",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-08T14:43:06.399502Z",
-     "start_time": "2023-11-08T14:43:06.386128Z"
+     "end_time": "2024-01-28T12:50:36.650973Z",
+     "start_time": "2024-01-28T12:50:36.635970Z"
     }
    },
    "outputs": [],
@@ -291,12 +291,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 10,
    "id": "6360552a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-08T14:43:06.415332Z",
-     "start_time": "2023-11-08T14:43:06.399502Z"
+     "end_time": "2024-01-28T12:50:36.666977Z",
+     "start_time": "2024-01-28T12:50:36.652973Z"
     }
    },
    "outputs": [],
@@ -321,12 +321,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 11,
    "id": "ddcb44a9",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-08T14:43:06.432005Z",
-     "start_time": "2023-11-08T14:43:06.416469Z"
+     "end_time": "2024-01-28T12:50:36.682980Z",
+     "start_time": "2024-01-28T12:50:36.667977Z"
     }
    },
    "outputs": [],
@@ -339,12 +339,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 12,
    "id": "a0a93789",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-08T14:43:06.448631Z",
-     "start_time": "2023-11-08T14:43:06.433411Z"
+     "end_time": "2024-01-28T12:50:36.698984Z",
+     "start_time": "2024-01-28T12:50:36.683981Z"
     }
    },
    "outputs": [],
@@ -360,23 +360,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 13,
    "id": "c030d071",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-08T14:43:06.465253Z",
-     "start_time": "2023-11-08T14:43:06.449852Z"
+     "end_time": "2024-01-28T12:50:36.714988Z",
+     "start_time": "2024-01-28T12:50:36.700985Z"
     }
    },
    "outputs": [],
    "source": [
-    "def recursive_min_TWD_calculator(G, fp, dwc, steps, operation):\n",
+    "def recursive_min_TWD_calculator(G, fp, dwc, steps, operation):# 关卡图，旗点坐标，深权系数，贪婪步数，当前操作\n",
     "    G1=G.copy()\n",
     "    curr_operation=operation\n",
     "    \n",
+    "    # 根据当前操作给旗点对应的节点变色\n",
     "    (G1._node[fp])['color']=curr_operation\n",
+    "    # 合并相邻同色节点\n",
     "    G1=merge(G1, fp)\n",
     "    \n",
+    "    # 贪婪步数减小到1时终止递归\n",
     "    if steps==1:\n",
     "        return calc_TWD(G1, fp, dwc)\n",
     "        \n",
@@ -386,25 +389,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 14,
    "id": "9acc0d89",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-08T14:43:06.481822Z",
-     "start_time": "2023-11-08T14:43:06.466479Z"
+     "end_time": "2024-01-28T12:50:36.730991Z",
+     "start_time": "2024-01-28T12:50:36.716989Z"
     }
    },
    "outputs": [],
    "source": [
     "def multistep_greedy_algorithm(G, fp, dwc=1, steps=1):\n",
     "    G1=G.copy()\n",
+    "    # 计算初始总加权深度\n",
     "    pre_TWD=calc_TWD(G1, fp, dwc)\n",
+    "    # 初始化操作序列\n",
     "    seq_opt=[]\n",
     "    \n",
+    "    # 当总加权系数大于0时，进行循环求解\n",
     "    while pre_TWD>0:\n",
     "        o_T_df=pd.DataFrame([list({'r','o','y','g','b','p'}-{(G1._node[fp])['color']}), np.empty(5, dtype=int)], \\\n",
     "                            index=['operation', 'TWD']).T\n",
     "        \n",
+    "        # 当贪婪步数过多时，削减贪婪步数\n",
     "        steps_to_use=steps\n",
     "        is_excessive=True\n",
     "        while is_excessive==True:\n",
@@ -418,12 +425,15 @@
     "                \n",
     "            is_excessive=False if zero_counter<=1 else True\n",
     "            steps_to_use-=1\n",
-    "            \n",
+    "        \n",
+    "        # 选出最优当前操作\n",
     "        operation_opt=o_T_df.sort_values(by='TWD').iloc[0, 0]\n",
     "        seq_opt.append(operation_opt)\n",
     "        \n",
+    "        # 根据最优当前操作更新关卡图\n",
     "        (G1._node[fp])['color']=operation_opt\n",
     "        G1=merge(G1, fp)\n",
+    "        # 更新总加权深度\n",
     "        pre_TWD=calc_TWD(G1, fp, dwc)\n",
     "        \n",
     "    return len(seq_opt), seq_opt"
@@ -431,12 +441,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 22,
    "id": "6139dcc7",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-08T14:49:31.676894Z",
-     "start_time": "2023-11-08T14:46:06.312414Z"
+     "end_time": "2024-01-28T12:52:47.357560Z",
+     "start_time": "2024-01-28T12:52:46.771232Z"
     }
    },
    "outputs": [
@@ -445,12 +455,12 @@
      "output_type": "stream",
      "text": [
       "14\n",
-      "['b', 'p', 'b', 'g', 'r', 'o', 'y', 'p', 'r', 'b', 'o', 'g', 'p', 'y']\n"
+      "['b', 'p', 'b', 'g', 'r', 'o', 'b', 'g', 'y', 'p', 'r', 'o', 'b', 'p']\n"
      ]
     }
    ],
    "source": [
-    "steps, seq_opt=multistep_greedy_algorithm(G, fp, dwc=1, steps=6)\n",
+    "steps, seq_opt=multistep_greedy_algorithm(G, fp, dwc=1, steps=2)\n",
     "\n",
     "print(steps)\n",
     "print(seq_opt)"
